--- a/client/pom.xml
+++ b/client/pom.xml
@@ -54,5 +54,24 @@
 			<scope>compile</scope>
 		</dependency>
 
+		<dependency>
+		    <groupId>org.jmock</groupId>
+		    <artifactId>jmock</artifactId>
+		    <version>2.5.1</version>
+		    <scope>test</scope>
+		</dependency>
+
+		<dependency>
+		    <groupId>jmock</groupId>
+		    <artifactId>jmock-cglib</artifactId>
+		    <version>1.2.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.jmock</groupId>
+		    <artifactId>jmock-legacy</artifactId>
+		    <version>2.5.1</version>
+		</dependency>
+
 	</dependencies>	
 </project>
