--- a/client/src/main/webapp/WEB-INF/web.xml
+++ b/client/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,7 @@
 	<servlet>
 		<servlet-name>client</servlet-name>
 		<servlet-class>uk.co.activelylazy.devpractice.client.Client</servlet-class>
+		<load-on-startup>1</load-on-startup>
 	</servlet>
 	
 	<servlet-mapping>
