--- a/server/pom.xml
+++ b/server/pom.xml
@@ -65,5 +65,13 @@
 		    <artifactId>jmock-legacy</artifactId>
 		    <version>2.5.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>net.sf.json-lib</groupId>
+			<artifactId>json-lib</artifactId>
+			<version>2.3</version>
+			<classifier>jdk15</classifier>
+		</dependency>
+		
 	</dependencies>	
 </project>
