Changed scores listener to provide all scores

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -73,5 +73,10 @@
 			<classifier>jdk15</classifier>
 		</dependency>
 		
+		<dependency>
+		    <groupId>com.google.collections</groupId>
+		    <artifactId>google-collections</artifactId>
+		    <version>1.0</version>
+		</dependency>
 	</dependencies>	
 </project>
